[workspace]
resolver = "2"

members = [
    "game1",
    "game2",
    "game3",
    "game5",
    "game5/deployer",
    "game5/liquidity_pool",
    "ex_liquidity_pool",
    "ex_token",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.8.4"